sprint 12 фикс для получения популярных фильмов